--- a/index.html
+++ b/index.html
@@ -12,6 +12,37 @@
 </head>
 
 <body>
+    <script id="person-template" type="text/x-handlebars-template">
+        <img src={{ user.img }}>
+        <p>{{ user.name }}</p>
+        <p>{{ user.address }}</p>
+    </script>
+
+    <script id="quote-template" type="text/x-handlebars-template">
+        <p>Favorite quote: {{ quote }}</p>
+        <p>Kanye West</p>
+    </script>
+
+    <script id="pokemon-template" type="text/x-handlebars-template">
+        <img src="{{ pokemon.image }}">
+        <p>Favorite Pokemon: {{ pokemon.name }}</p>
+    </script>
+
+    <script id="receipe-template" type="text/x-handlebars-template">
+        <p>About me | or my favorite receipe =)</p>
+        {{#each receipes}}
+        <p>{{ row }}</p>
+        {{/each}}
+    </script>
+
+    <script id="friends-template" type="text/x-handlebars-template">
+        {{#each objects }}
+            <p>{{ name }}</p>
+        {{/each}}
+    </script>
+    
+
+
     <div class="container">	
         <div class="user-container"></div>	
         <div class="quote-container"></div>	
@@ -25,10 +56,14 @@
             </div>	
         </div>	
         <div class="buttons">	
-            <button>Load User Data</button>	
-            <button>Display User</button>	
+            <button>GET User</button>	
         </div>	
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.4/handlebars.js"></script>
+    <script src="Renderer.js"></script>
+    <script src="APIManager.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
